<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFullInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="0.8"
        android:padding="@dimen/ten"
        android:scrollbars="vertical"
        android:text="@string/givi_description" />

    <Button
        android:id="@+id/bShareInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <Button
        android:id="@+id/bViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_full_screen" />
</LinearLayout>