<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/ten">

    <TextView
        android:id="@+id/tvOtherHeroName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/givi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/twenty_two_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOtherHeroStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_centimeter" />

    <TextView
        android:id="@+id/tvOtherHeroWeakness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feminists" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/two"
        android:foreground="@color/colorPrimary" />

</LinearLayout>